LIST OF CHANGES
---------------

release 6.41.1 (2025-11-11)
 - The rule for all mlwh tables is to have character set utf8 and collation
   utf8_unicode_ci. The collation was not set when eseq_run table was created.
   Mismatching collations necessitate setting the collation explicitly when
   joining between eseq_run and eseq_run_lane_metrics on the run folder name. To
   make joining straightforward, the collation on the eseq_run table and on
   all existing VARCHAR columns of this table is set to utf8_unicode_ci.
 - CI updates

release 6.41.0 (2025-09-01)
 - Added delegations and aliases to ORM classes for eseq* tables to make
   the code that fetches LIMS data for SeqQC work for Elembio.

release 6.40.0 (2025-08-19)
 - Updates for eseq_run table:
   - added run_manifest JSON column,
   - added run_type column,
   - updated a comment for run_stats column.

release 6.39.1 (2025-08-06)
 - Renamed scripts/update_schema_7.0.0.sql to scripts/update_schema_6.39.0.sql
   so that the name of the script corresponds to the release version for the
   update of the production database.
 - Deleted redundant WTSI::DNAP::Warehouse::Schema::Query::LimsFlags role.

release 6.39.0 (2025-07-16)
 - Updated DBIx ORM classes to bring them up-to-date with the production database.
 - Added tables for Elembio data - iseq_run_lane_metrics and iseq_product_metrics.
   Generated ORM classes for these tables.

release 6.38.0 (2025-04-02)
 - Change iseq_product_metrics tag_decode_count from int to bigint to support
   values greater than 4294967295 and bring other tables up to date.
  
release 6.37.0 (2025-03-10)
 - Added 'lane_released' column to the existing iseq_run_lane_metrics table
   to capture the date of lane release.

release 6.36.0 (2025-02-20)
 - Added eseq_run table to ml warehouse database. The table will keep
   information about a run performed on an Element Biosciences instrument.
   Generate DBIx class for this table.

release 6.35.0 (2025-01-16)